2011-03-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure, unix/tcl.m4: SHLIB_LD_LIBS='${LIBS}' for OSF1-V*.
	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
	(SC_PATH_X): Correct syntax error when xincludes not found.
	Backported from Tcl 8.5
	* generic/tclCkalloc.c: [Bug #3197864] pointer truncation on Win64
	TCL_MEM_DEBUG builds

2010-03-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWin32Dll.c:	#ifdef protections to permit builds with
	* win/tclWinChan.c:	mingw on amd64 systems. Thanks to "mescalinum"
	* win/tclWinFCmd.c:	for reporting and testing.
	Merged --cherrypick from Tcl8.5 (2010-09-08,48191d3979)

2011-03-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc.
	* win/configure:      (autoconf-2.13)
	* win/tclWin32Dll.c:  [Patch 3059922]: fixes for mingw64 - gcc4.5.1
	Merged --cherrypick from Tcl8.5 (2011-01-17, 6e410a115b)

2011-03-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclBasic.c: Fix gcc warnings: variable set but not used

2011-03-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	More replacements of Tcl_UtfBackslash() calls
	* generic/tclCmdMZ.c:	with TclParseBackslash() where possible.
	* generic/tclCompExpr.c:
	* generic/tclCompile.c:
	* generic/tclUtil.c (TclFindElement):	Guard escape sequence scans
	to not overrun the string end.  [Bug 3192636]

2011-03-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParse.c (TclParseBackslash): Correct trunction checks in
	* tests/parse.test:	\x and \u substitutions.  [Bug 3200987]

2011-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCkalloc.c:  [Bug 3129448]: Possible over-allocation on 64-bit
	* generic/tclHash.c:     platforms, part 2, backported strcpy->memcpy
	* generic/tclProc.c      change but not change in any struct.

2011-01-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinDde.c:  Fix gcc-4.5.2 error: lvalue required as ...